--- a/SportsSideKick/app/src/main/res/layout/wall_item_news_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news_new.xml
@@ -39,26 +39,28 @@
             android:textStyle="bold" />
 
         <RelativeLayout
+            android:id="@+id/user_details"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/caption"
-            android:paddingBottom="@dimen/padding_8"
-            android:paddingEnd="@dimen/padding_8"
-            android:paddingStart="@dimen/padding_8">
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
+            android:paddingBottom="@dimen/margin_5"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_10">
 
             <LinearLayout
                 android:id="@+id/comments_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
                 android:gravity="center">
 
                 <ImageView
                     android:id="@+id/comments_icon"
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:layout_marginEnd="4dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="2dp"
                     android:background="@drawable/ic_comment" />
 
                 <TextView
@@ -66,7 +68,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="204"
-                    android:textColor="@color/wall_comment_color" />
+                    android:textSize="10sp" />
 
             </LinearLayout>
 
@@ -74,37 +76,36 @@
                 android:id="@+id/likes_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_alignParentBottom="true"
                 android:layout_marginEnd="@dimen/padding_8"
                 android:layout_toStartOf="@id/comments_container"
                 android:gravity="center">
 
                 <ImageView
                     android:id="@+id/likes_icon"
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:layout_marginEnd="4dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="2dp"
                     android:background="@drawable/ic_like" />
+
 
                 <TextView
                     android:id="@+id/likes_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="6901"
-                    android:textColor="@color/wall_comment_color" />
+                    android:textSize="10sp" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/author"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/row_wall_post_likes_container"
+                android:layout_toStartOf="@id/likes_container"
                 android:maxLines="1"
-                android:scrollHorizontally="true"
                 android:text="Christopher Ogden"
-                android:textColor="@color/lightGrey" />
+                android:textSize="10sp"
+                android:textColor="@color/lightGrey"/>
         </RelativeLayout>
     </RelativeLayout>
 
