JoinChat - Layout update.

--- a/SportsSideKick/app/src/main/res/layout/row_chat_expanded_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_chat_expanded_item.xml
@@ -24,6 +24,7 @@
         android:paddingBottom="@dimen/padding_8"
         android:maxLines="1"
         android:ellipsize="end"
-        android:lines="1"/>
+        android:lines="1"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
