Added new dimension, layout updates.

--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -434,8 +434,8 @@
 
                     <ImageView
                         android:id="@+id/profile_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/activity_lounge_user_profile_size"
+                        android:layout_height="@dimen/activity_lounge_user_profile_size"
                         android:layout_centerInParent="true"
                         android:layout_marginBottom="@dimen/padding_8"
                         android:layout_marginLeft="@dimen/padding_8"
