--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -246,7 +246,8 @@
             android:background="@color/chat_input_edit_text_background"
             android:padding="@dimen/half_margin"
             android:visibility="gone"
-            android:animateLayoutChanges="true">
+            android:animateLayoutChanges="true"
+            android:clickable="true">
 
             <TextView
                 android:id="@+id/chat_menu_create"
