--- a/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
@@ -153,6 +153,7 @@
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
+                android:id="@+id/search_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
