--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
@@ -12,23 +12,19 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/image"
             android:layout_width="230dp"
-            android:layout_height="120dp">
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginEnd="@dimen/margin_15"
-                android:layout_marginStart="@dimen/margin_15"
-                android:layout_marginTop="@dimen/margin_15"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/news_holder_image"
-                android:visibility="visible" />
-        </RelativeLayout>
+            android:layout_height="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="@dimen/margin_15"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_marginTop="@dimen/margin_15"
+            android:scaleType="fitStart"
+            android:adjustViewBounds="true"
+            android:src="@drawable/news_holder_image"
+            android:visibility="visible" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
