External push notifications - partially done

--- a/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_create_chat.xml
@@ -242,7 +242,7 @@
         android:textAllCaps="false"
         android:layout_alignParentBottom="true"/>
 
-    <tv.sportssidekick.sportssidekick.util.AutofitRecyclerView
+    <tv.sportssidekick.sportssidekick.util.ui.AutofitRecyclerView
         android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
