--- a/SportsSideKick/app/src/main/res/layout/activity_splash.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/background_login" />
 
     <RelativeLayout
-        android:id="@+id/login_container"
+        android:id="@+id/splash_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
