--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -208,23 +208,18 @@
             android:layout_height="match_parent"
             android:background="@color/chat_input_edit_text_background"
             android:gravity="start|center_vertical"
-            android:hint="Enter your message here..."
-            android:imeOptions="flagNoExtractUi"
-            android:maxLines="5"
             android:padding="@dimen/padding_8"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimarySemiLight"
             android:textSize="10sp"
+            android:maxLines="1"
+            android:inputType="text"
+            android:imeOptions="actionSend"
+            android:imeActionLabel="Send"
+            android:imeActionId="@+id/action_send_message_id"
+            android:hint="Enter your message here..."
             android:animateLayoutChanges="true"/>
 
-        <Button
-            android:id="@+id/send_button"
-            android:layout_width="@dimen/chat_send_button_size"
-            android:layout_height="@dimen/chat_send_button_size"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="@dimen/margin_8"
-            android:background="@drawable/btn_send" />
     </RelativeLayout>
 
         <ImageButton
