--- a/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_stash.xml
@@ -129,7 +129,7 @@
 
 
     <!-- STATEMENTS -->
-    <tv.sportssidekick.sportssidekick.util.AutofitRecyclerView
+    <tv.sportssidekick.sportssidekick.util.ui.AutofitRecyclerView
         android:id="@+id/stash_recycler_view"
         android:layout_width="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
