--- a/SportsSideKick/app/src/main/res/values-sw600dp/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
 
+    <!--for 7” tablets-->
+
     <dimen name="activity_horizontal_margin">48dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
@@ -13,13 +15,13 @@
     <dimen name="margin_20">12dp</dimen>
     <dimen name="margin_5">5dp</dimen>
     <dimen name="margin_15">15dp</dimen>
-    <dimen name="margin_60">60dp</dimen>
+    <dimen name="margin_60">40dp</dimen>
     <dimen name="margin_70">70dp</dimen>
-    <dimen name="margin_90">90dp</dimen>
+    <dimen name="margin_90">60dp</dimen>
     <dimen name="margin_80">80dp</dimen>
     <dimen name="margin_40">40dp</dimen>
     <dimen name="padding_40">40dp</dimen>
-    <dimen name="margin_30">30dp</dimen>
+    <dimen name="margin_30">20dp</dimen>
     <dimen name="standard_button_height">48dp</dimen>
     <dimen name="standard_button_width_half">24dp</dimen>
 
@@ -78,7 +80,7 @@
     <dimen name="popup_join_chat_confirm_button_height">30dp</dimen>
     <dimen name="popup_join_chat_confirm_button_width">70dp</dimen>
     <dimen name="popup_language_image_element_size">80dp</dimen>
-    <dimen name="popup_language_bottom_buttons_container_height">60dp</dimen>
+    <dimen name="popup_language_bottom_buttons_container_height">50dp</dimen>
     <dimen name="popup_manage_chat_width">544dp</dimen>
     <dimen name="popup_manage_chat_elemnt_height">60dp</dimen>
     <dimen name="popup_manage_chat_caption_label_height">40dp</dimen>
@@ -90,5 +92,5 @@
     <dimen name="popup_your_friends_next_level_cointainer_text_size">25dp</dimen>
     <dimen name="popup_your_statement_size">400dp</dimen>
     <dimen name="popup_your_walet_coin_size">35dp</dimen>
-    <dimen name="popup_your_walet_bundle">160dp</dimen>
+    <dimen name="popup_your_walet_bundle">115dp</dimen>
 </resources>
