--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -45,6 +45,11 @@
         android:text="05.12.2016"/>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
+        android:layout_centerVertical="true">
+
     <ImageButton
         android:id="@+id/deny_button"
         android:layout_width="wrap_content"
@@ -68,4 +73,5 @@
         android:background="@null"
         android:scaleType="centerInside"
         android:src="@drawable/friend_request_accept" />
+    </RelativeLayout>
 </RelativeLayout>
