--- a/SportsSideKick/app/src/main/res/layout/popup_modal.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_modal.xml
@@ -39,13 +39,13 @@
         android:layout_below="@+id/text"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_height="60dp">
+        android:layout_height="@dimen/popup_language_bottom_buttons_container_height">
         <ImageButton
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="@dimen/margin_30"
+            android:layout_marginBottom="@dimen/margin_20"
             android:background="@null"
             android:scaleType="centerInside"
             android:src="@drawable/popup_cancel_button" />
